# provenance-corpus-harness

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MAINTAINERS.md  MANIFEST.in  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml
docs/: SOURCE_POLICY.md
harness/: __init__.py  acquisition.py  assets.py  base.py  browser.py  cli.py  constants.py  crawl.py  media.py  rights.py  source_gates.py  source_package.py  transport.py  url_safety.py
harness/evidence/: __init__.py  build.py  query.py  schema.py  verify.py  visual.py
harness/scrapers/: __init__.py  blog.py  github.py  hackernews.py  producthunt.py  reddit.py  rss.py  youtube.py
tests/: test_acquisition.py  test_assets.py  test_base.py  test_blog.py  test_browser.py  test_cli.py  test_cli_extended.py  test_crawl.py  test_evidence.py  test_github.py  test_hackernews.py  test_media.py  test_producthunt.py  test_public_surface.py  test_reddit.py  test_rights.py  test_rss.py  test_source_gates.py  test_source_package.py  test_transport.py  test_url_safety.py  test_youtube.py
